# NeuralNetwork

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  runner.cpp
Libraries/: CMakeLists.txt  activation_functions.h  exclusive_or_neural_network.cpp  exclusive_or_neural_network.h  feed_forward_network.cpp  feed_forward_network.h  neural_network_base.cpp  neural_network_base.h
Libraries/Base/: CMakeLists.txt  neural_network_architecture_data.h  neural_network_data.h  neuron.cpp  neuron.h  synapse.cpp  synapse.h
Libraries/Test/: activation_functions_test.cpp  exclusive_or_neural_network_test.cpp  feed_forward_network_test.cpp  neural_network_base_test.cpp
